@@ -1,3 +1,17 @@
+# Copyright (C) 2006 The Free Software Foundation, Inc.
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2, or (at your option)
+# any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+
 RSH_DFLT="@RSH_DFLT@"
 GPG="@GPG@"
 DEFAULT_VERIFY_TEMPLATE="@DEFAULT_VERIFY_TEMPLATE@"
+DEFAULT_SIGN_TEMPLATE="@DEFAULT_SIGN_TEMPLATE@"
+DEFAULT_SIGN_TEXTMODE="@DEFAULT_SIGN_TEXTMODE@"
